--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.3.1",
     "@react-native-firebase/auth": "^8.0.8",
+    "@react-native-firebase/database": "^7.2.6",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
