--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
   package="com.kodluyoruz_end">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE"/>
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
